--- a/loginPQ.html
+++ b/loginPQ.html
@@ -288,7 +288,7 @@ button[type="submit"] {
         <a href="ABOUT US.html">
           <img class="img-2" src="buo2.png" alt="Imagen 2">
         </a>
-        <a href="prvowland.html">
+        <a href="index.html">
           <img class="img-1" src="buo.png" alt="Imagen 1">
         </a>
       </div>
