--- a/privacy.html
+++ b/privacy.html
@@ -15,7 +15,7 @@
           <a href="ABOUT US.html">
             <img class="img-2" src="buo2.png" alt="Imagen 2">
           </a>
-          <a href="prvowland.html">
+          <a href="index.html">
             <img class="img-1" src="buo.png" alt="Imagen 1">
           </a>
         </div>
