--- a/bachiller_en_ciencias.html
+++ b/bachiller_en_ciencias.html
@@ -142,7 +142,7 @@ function checkAnswer() {
         } else {
             alert("¡You've completed the quiz!");
             currentQuestion = 0;
-            window.location.href = "prvowland.html";
+            window.location.href = "index.html";
         }
     } else {
         alert("Please answer correctly before answering the next question.");
