--- a/signin.html
+++ b/signin.html
@@ -342,7 +342,7 @@
 
         <div class="login-box"> 
         <h2>Sign up</h2>
-        <form action="procesar_registro.php" method="post">
+        <form action="pilar.js" method="post">
             <input type="text" name="Email" placeholder="Email" required><br>
             <input type="text" name="nombre" placeholder="Full Name" required><br>
             <input type="text" id= "usuario" name="user" placeholder="Username" required><br>
